--- a/src/App.css
+++ b/src/App.css
@@ -18,13 +18,15 @@
   display: flex;
   flex-direction: row;
   justify-content: space-between;
-  width: 80%
+  width: 85%
 }
 
 .settings-options {
   display: flex;
   flex-direction: row;
-  margin-left: 15px;
+  align-items: center;
+  width: 40%;
+  justify-content: space-evenly
 }
 
 .option {
