--- a/src/App.css
+++ b/src/App.css
@@ -32,7 +32,7 @@
 .option {
   width: 12px;
   height: 12px;
-  border: solid 1px #8b8d91;
+  border: solid 1px #2f2f30;
   border-radius: 50%;
 }
 
@@ -56,5 +56,6 @@
 }
 
 .preview-panel div {
+  text-align: left;
   margin-left: 3%;
 }
