--- a/src/App.css
+++ b/src/App.css
@@ -32,7 +32,7 @@
 .option {
   width: 12px;
   height: 12px;
-  border: solid 1px #2f2f30;
+  border: solid 2px #585858cc;
   border-radius: 50%;
 }
 
